--- a/.gitignore
+++ b/.gitignore
@@ -56,7 +56,7 @@ projects/*
 runtimes/*
 !runtimes/*.*
 # Clang, which is tracked independently.
-tools/clang
+#tools/clang
 # LLDB, which is tracked independently.
 tools/lldb
 # lld, which is tracked independently.
@@ -73,7 +73,7 @@ docs/_build
 .vscode
 .vs
 # clangd index
-.clangd
+#.clangd
 
 #==============================================================================#
 # Files created in tree by the Go bindings.
